fixed overflow-> card.css

--- a/pages/workshops/css/card.css
+++ b/pages/workshops/css/card.css
@@ -121,7 +121,10 @@ h4 {
     height: 260px;
   }
   .card {
-    height: 268px;
+    height: 350px;
+  }
+  .card-wrapper{
+  height:330px;
   }
 }
 
